--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BankConnection": "Server=WVDEV\\SQLEXPRESS;Database=Bank;Trusted_Connection=true;TrustServerCertificate=True"
+  },
+  "JWT": {
+    "Key": "super secret key"
   }
 }
